# termionix

./: CHANGELOG.md  Cargo.toml  LICENSE.md  NOTES.md  README.md  TODO.md  crates.js  help.html  index.html  settings.html  src-files.js
ansicodec/: Cargo.toml
ansicodec/benches/: ansi_benchmarks.rs
ansicodec/src/: ansi.rs  codec.rs  config.rs  consts.rs  lib.rs  parser.rs  result.rs  string.rs  style.rs  utility.rs
ansicodec/src/utility/: spanned.rs  strip.rs  styled.rs
ansicodec/tests/: codec_tests.rs  integration_tests.rs
ansicodes/: Cargo.toml  README.md
ansicodes/src/: ansi.md  ansi.rs  config.rs  lib.rs  mapper.rs  segment.rs  spanned.rs  string.rs  style.rs  utility.rs
client/: Cargo.toml  README.md
client/benches/: benchmark.rs
client/src/: client.rs  config.rs  connection.rs  error.rs  handler.rs  lib.rs
client/tests/: comprehensive.rs
codec/: Cargo.toml
compress/: Cargo.toml
compress/benches/: compress_benchmarks.rs
compress/src/: lib.rs
compress/tests/: integration_tests.rs  unit_tests.rs
doc/: EOR.md  gmcp.md  mccp.md  mmcp.md  mnes.md  msdp.md  mslp.md  mssp.md  mtts.md  qstate.md  rfc1091.txt  rfc1143.txt  rfc1184.txt  rfc1572.txt  rfc1950.txt  rfc855.txt  rfc856.txt  rfc857.txt  rfc858.txt  rfc885.txt
examples/: advanced_client.rs  advanced_features.rs  ansi_demo.rs  echo_server.rs  simple_client.rs  simple_server.rs  split_connection_demo.rs  telnet_client.rs  terminal_client_example.rs  terminal_direct.rs
search.index/: 003ae7ecbe5e.js  008f2cfbbb1a.js  00c7d3c25379.js  0129375718aa.js  01ed131afdcf.js  01f550dd727f.js  020c9a9c0fb7.js  024bb1caaaa3.js  02718a20ddfb.js  036b9d493dbd.js  03b844a6f6a0.js  0468575a2805.js  04bf01c65657.js  0548f6b7be74.js  06e06af4223a.js  07476abb2395.js  074f1ec269e8.js  081da70abe45.js  086c2e364538.js  089db8fbda5d.js  0a16d82fb824.js  0a64332fe52c.js  0c6731754345.js  0c6fbb89180b.js  0cff770d7cff.js  0d4d3f2b77d3.js  0daf5b550ed4.js  0dd8b598e98c.js  0e641232abeb.js  0ebddc1e6bf4.js  0f4cc98e7ffa.js  0fb94c4f2f59.js  106e3c7e4ee9.js  1177b0457938.js  118f187fda84.js  11d9c8a29597.js  1220bf81179f.js  1360c1de769c.js  136f30e067d7.js  13ae37be6d03.js  (+181 more)
server/: Cargo.toml  README.md
service/: Cargo.toml  README.md  TESTING.md
service/benches/: server_benchmarks.rs  service_benchmarks.rs
service/src/: buffer.rs  client.rs  config.rs  connection.rs  error.rs  handler.rs  lib.rs  manager.rs  metrics.rs  result.rs  server.rs  service.rs  svc2.rs  types.rs  utility.rs  worker.rs
service/tests/: config_tests.rs  connection_tests.rs  error_recovery_tests.rs  integration_tests.rs  memory_tests.rs  protocol_tests.rs  security_tests.rs
suite/: Cargo.toml  README.md
suite/benches/: suite_benchmarks.rs
suite/src/: lib.rs
suite/tests/: suite_correctness.rs
telnetcodec/: Cargo.toml  README.md
telnetcodec/benches/: telnet_benchmarks.rs
telnetcodec/src/: args.rs  codec.rs  consts.rs  event.rs  frame.rs  input.rs  lib.rs  options.rs  result.rs
telnetcodec/src/args/: gmcp.rs  linemode.rs  msdp.rs  mssp.rs  naocrd.rs  naohts.rs  naws.rs  status.rs
telnetcodec/tests/: integration_tests.rs  unit_tests.rs
terminal/: Cargo.toml  README.md
terminal/benches/: terminal_benchmarks.rs
terminal/src/: buffer.rs  codec.rs  command.rs  event.rs  lib.rs  result.rs  terminal.rs  terminal_new.rs  types.rs  utility.rs
terminal/tests/: integration_tests.rs
termionix_ansicodec/: all.html  enum.AnsiCodecError.html  enum.Blink.html  enum.Color.html  enum.ColorMode.html  enum.Font.html  enum.Ideogram.html  enum.Intensity.html  enum.SGRParameter.html  enum.Script.html  enum.Segment.html  enum.SubnegotiationErrorKind.html  enum.TelnetArgument.html  enum.TelnetCodecError.html  enum.TelnetEvent.html  enum.TelnetFrame.html  enum.TelnetOption.html  enum.TelnetSide.html  enum.Underline.html  index.html  sidebar-items.js  struct.AnsiCodec.html  struct.AnsiConfig.html  struct.AnsiParser.html  struct.SegmentedString.html  struct.TelnetCodec.html  type.AnsiCodecResult.html  type.TelnetCodecResult.html
termionix_client/: all.html  enum.AnsiApplicationProgramCommand.html  enum.AnsiCodecError.html  enum.AnsiControlCode.html  enum.AnsiControlSequenceIntroducer.html  enum.AnsiDeviceControlString.html  enum.AnsiOperatingSystemCommand.html  enum.AnsiPrivacyMessage.html  enum.AnsiSequence.html  enum.AnsiStartOfString.html  enum.Blink.html  enum.ClientError.html  enum.Color.html  enum.ColorMode.html  enum.CompressionAlgorithm.html  enum.ConnectionState.html  enum.Font.html  enum.Ideogram.html  enum.Intensity.html  enum.SGRParameter.html  enum.Script.html  enum.Segment.html  enum.Span.html  enum.SubnegotiationErrorKind.html  enum.TelnetArgument.html  enum.TelnetCodecError.html  enum.TelnetCommand.html  enum.TelnetEvent.html  enum.TelnetFrame.html  enum.TelnetOption.html  enum.TelnetSide.html  enum.TerminalCommand.html  enum.TerminalError.html  enum.TerminalEvent.html  enum.Underline.html  fn.strip_ansi_codes.html  fn.terminal_word_unwrap.html  fn.terminal_word_wrap.html  index.html  sidebar-items.js  (+20 more)
termionix_compress/: all.html  enum.CompressionAlgorithm.html  index.html  sidebar-items.js  struct.CompressionReader.html  struct.CompressionStream.html  struct.CompressionWriter.html  trait.AsyncStream.html
termionix_server/: all.html  enum.AnsiApplicationProgramCommand.html  enum.AnsiCodecError.html  enum.AnsiControlCode.html  enum.AnsiControlSequenceIntroducer.html  enum.AnsiDeviceControlString.html  enum.AnsiOperatingSystemCommand.html  enum.AnsiPrivacyMessage.html  enum.AnsiSequence.html  enum.AnsiStartOfString.html  enum.Blink.html  enum.Color.html  enum.ColorMode.html  enum.CompressionAlgorithm.html  enum.ConnectionState.html  enum.ControlMessage.html  enum.EventHandler.html  enum.Font.html  enum.Ideogram.html  enum.Intensity.html  enum.SGRParameter.html  enum.Script.html  enum.Segment.html  enum.Span.html  enum.SubnegotiationErrorKind.html  enum.TelnetArgument.html  enum.TelnetCodecError.html  (+45 more)
testsuite/: Cargo.toml  README.md
testsuite/benches/: suite_benchmarks.rs
testsuite/tests/: suite_correctness.rs
(+549 files in other folders)
