[workspace]
resolver = "3"
members = [
    "ansicodes",
    "codec",
    "service", "terminal", "compress",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
keywords = ["ansi", "telnet", "terminal"]
readme = "README.md"
license = "APACHE2 or MIT"
description = "Ansi and Telnet Library for Rust."
authors = ["Hans W. Uhlig <huhlig@gmail.com>"]
documentation = "https://huhlig.github.io/termionix"
homepage = "https://huhlig.github.io/termionix"
repository = "https://github.com/huhlig/termionix"
categories = ["network-programming"]


[workspace.dependencies]
async-compression = { version = "0.4", features = ["tokio", "all-algorithms"] }
bytes = { version = "1", features = ["default"] }
enum-kinds = { version = "0.5", features = ["default"] }
futures = { version = "0.3", features = ["default"] }
futures-util = { version = "0.3", features = ["default"] }
pin-project-lite = { version = "0.2" }
termionix-ansicodes = { path = "ansicodes" }
termionix-codec = { path = "codec" }
termionix-compress = { path = "compress" }
termionix-service = { path = "service" }
termionix-terminal = { path = "terminal" }
tokio = { version = "1", features = ["rt-multi-thread", "tracing", "net", "test-util", "macros", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1", features = ["default"] }
tracing-test = { version = "0.2" }
tracing-timing = { version = "0.7" }
