[package]
name = "termionix-ansicodes"
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
bytes.workspace = true
tracing.workspace = true
tracing-timing.workspace = true

[dev-dependencies]
tracing-test.workspace = true