[package]
name = "termionix-client"
version = "0.1.0"
edition = "2021"
authors = ["Hans W. Uhlig <huhlig@gmail.com>"]
license = "Apache-2.0"
description = "High-level Telnet client library for Termionix"
repository = "https://github.com/huhlig/termionix"
keywords = ["telnet", "client", "async", "tokio", "mud"]
categories = ["network-programming", "asynchronous"]

[dependencies]
termionix-telnetcodec = { path = "../telnetcodec", version = "0.1" }
termionix-ansicodec = { path = "../ansicodec", version = "0.1" }
termionix-terminal = { path = "../terminal", version = "0.1" }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }