[package]
name = "termionix-client"
version = "0.1.0"
edition = "2021"
authors = ["Hans W. Uhlig <huhlig@gmail.com>"]
license = "Apache-2.0"
description = "High-level Telnet client library for Termionix"
repository = "https://github.com/huhlig/termionix"
keywords = ["telnet", "client", "async", "tokio", "mud"]
categories = ["network-programming", "asynchronous"]

[dependencies]
termionix-service.workspace = true

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true