[package]
name = "termionix-service"
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
# Internal Crates
termionix-terminal.workspace = true
termionix-compress.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# Async utilities
futures-util = { workspace = true, features = ["sink"] }

# Error handling
thiserror.workspace = true

# Serialization
bytes.workspace = true

[dev-dependencies]
tokio.workspace = true
criterion = { version = "0.5", features = ["async_tokio"] }
termionix-ansicodec.workspace = true
termionix-telnetcodec.workspace = true
bytes.workspace = true

[[bench]]
name = "service_benchmarks"
harness = false
