[package]
name = "termionix-suite"
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
termionix-client.workspace = true
termionix-service.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "suite_benchmarks"
harness = false
