[package]
name = "termionix-telnetcodec"
description = "Tokio-based Telnet Codec"
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
bytes.workspace = true
byteorder.workspace = true
futures.workspace = true
pin-project-lite.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-test.workspace = true
criterion.workspace = true

[[bench]]
name = "telnet_benchmarks"
harness = false