[package]
name = "termionix-terminal"
description = "Termionix Terminal Codec"
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
enum-kinds.workspace = true
termionix-ansicodec.workspace = true
termionix-codec.workspace = true
tokio.workspace = true
tokio-util.workspace = true